--- a/src/components/home/2. Techs.astro
+++ b/src/components/home/2. Techs.astro
@@ -4,6 +4,16 @@ import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
+
+/**
+ * TOOLS:
+ * - https://borderize.com/
+ * - https://paintonline.editaraudio.com/
+ * - https://www.remove.bg/
+ * - https://www.iloveimg.com/
+ *
+*/
+
 ---
 <section class="bg-techs bg-polygon relative">
   <div class="techs-main-box main-width relative z-10">
@@ -46,7 +56,7 @@ const t = useTranslations(lang);
       <div class="techs-group m-3">
         <img src="/tech/mongodb.png" alt="MongoDB logo" title="MongoDB" />
         <img src="/tech/mysql.png" alt="MySQL logo" title="MySQL" />
-        <img src="/tech/elastic.png" alt="Elasticsearch logo" title="Elasticsearch" />
+        <img src="/tech/elasticsearch.png" alt="Elasticsearch logo" title="Elasticsearch" />
       </div>
 
     </div>
