--- a/src/components/home/2. Techs.astro
+++ b/src/components/home/2. Techs.astro
@@ -38,7 +38,7 @@ const t = useTranslations(lang);
       </div>
 
       <div class="techs-group m-3">
-        <img src="/tech/solana.svg" alt="Solana logo" title="Solana Blockchain" />
+        <img src="/tech/solana.png" alt="Solana logo" title="Solana Blockchain" />
         <img src="/tech/ethereum.png" alt="Ethereum logo" title="Ethereum Blockchain" />
         <img src="/tech/ipfs.png" alt="IPFS logo" title="Interplanetary File System" />
       </div>
