--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -44,15 +44,15 @@ export async function getStaticPaths() {
       <div class="main-width relative pt-0 pb-0 z-10">
 
         <div class="block sm:flex">
-          <a href="https://www.astreavirtual.com/" target="_blank" title="Editorial Astrea" class="text-center mt-2 mb-2 mr-4">
-            <img src="https://media.licdn.com/dms/image/C560BAQGEFqpF1SDLjA/company-logo_100_100/0/1519889152734?e=1698278400&v=beta&t=kvCUVJh9t1rxKMeVSM5oyL-MAc50AHC0O7UZlkGBaxg" alt="Astrea logo" />
+          <a href="https://www.astrea.com.ar/" target="_blank" title="Editorial Astrea" class="experience-link text-center mt-2 mb-2 mr-4">
+            <img src="/projects/astrea.png" alt="Astrea logo" />
             <small>Editorial Astrea</small>
           </a>
           <div>
             <h2>Software Manager</h2>
             <small><i>May 2021 - Present</i></small>
             <p>
-              Development of a digital library for reading legal books. <br>
+              Development of a digital library for reading legal books. <a href="https://astreavirtual.com/" target="_blank" title="Astrea Virtual">Get to know it!</a> <br>
               Development of e-commerce for the sale of books.
             </p>
             <span><strong>Skills:</strong> Angular · NodeJS · Docker · Firebase · IBM Cloud · MongoDB · Elasticsearch</span>
@@ -60,8 +60,7 @@ export async function getStaticPaths() {
               <h3>Researcher: Artificial Intelligence Applied to Justice</h3>
               <small><i>April 2020 - May 2021</i></small>
               <p>
-                Researcher of technologies applied to justice. <br>
-                Artificial intelligence for lawyers and judges.
+                Researcher of technologies applied to justice. Artificial intelligence for lawyers and judges.
               </p>
               <span><strong>Skills:</strong> Angular · NodeJS · Artificial Intelligence (AI) · IBM Watson · Heroku · Python</span>
             </div>
@@ -77,8 +76,8 @@ export async function getStaticPaths() {
       <div class="main-width relative pt-0 pb-0 z-10">
 
         <div class="block sm:flex">
-          <a href="https://platzi.com/" target="_blank" title="Platzi" class="text-center mt-2 mb-2 mr-4">
-            <img src="https://media.licdn.com/dms/image/C4E0BAQEOTcHh0HnWwQ/company-logo_100_100/0/1677870817987?e=1698278400&v=beta&t=Wd2A1ZsteH34DS-pSbYkvyn9tkkF4GIBN_iOF79Tn54" alt="Platzi logo" />
+          <a href="https://platzi.com/" target="_blank" title="Platzi" class="experience-link text-center mt-2 mb-2 mr-4">
+            <img src="/projects/platzi.png" alt="Platzi logo" />
             <small>Platzi</small>
           </a>
           <div>
@@ -101,15 +100,15 @@ export async function getStaticPaths() {
       <div class="main-width relative pt-0 pb-0 z-10">
 
         <div class="block sm:flex">
-          <a href="https://alquilando.com/ar" target="_blank" title="Alquilando" class="text-center mt-2 mb-2 mr-4">
-            <img src="https://media.licdn.com/dms/image/C4D0BAQF0G6rVrQazvQ/company-logo_100_100/0/1626794080598?e=1698278400&v=beta&t=hnE-XweL4dUMyGpnU0VLEoHeXMeQeSNgrFWjGp6wKv0" alt="Alquilando logo" />
+          <a href="https://alquilando.com/ar" target="_blank" title="Alquilando" class="experience-link text-center mt-2 mb-2 mr-4">
+            <img src="/projects/alquilando.png" alt="Alquilando logo" />
             <small>Alquilando</small>
           </a>
           <div>
             <h2>Javascript Full Stack Developer</h2>
             <small><i>Dec 2020 - Jun 2022 · 1 yr 7 mos</i></small>
             <p>
-              Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners. Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners.
+              Development of real state platform for clients in Argentina, Colombia, and Peru that allows communication and rentals management between brokers, tenants, and owners. Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners.
             </p>
             <span><strong>Skills:</strong> Angular · TypeScript · NodeJS · Express.js · Docker · MongoDB</span>
           </div>
@@ -124,15 +123,15 @@ export async function getStaticPaths() {
       <div class="main-width relative pt-0 pb-0 z-10">
 
         <div class="block sm:flex">
-          <a href="https://turismo.buenosaires.gob.ar/en" target="_blank" title="Gobierno Ciudad de Buenos Aires" class="text-center mt-2 mb-2 mr-4" style="line-height: 20px;">
-            <img src="https://media.licdn.com/dms/image/D4D0BAQG0XC6NvO-qgg/company-logo_100_100/0/1666634813401?e=1698278400&v=beta&t=GBl1rlqMQn6ezCiBY39NcFtpqUnUrs9g0E0ZMmJdVI8" alt="BA logo" />
+          <a href="https://buenosaires.gob.ar" target="_blank" title="Gobierno Ciudad de Buenos Aires" class="experience-link text-center mt-2 mb-2 mr-4" style="line-height: 20px;">
+            <img src="/projects/buenosaires.png" alt="BA logo" />
             <small>Government City <br> Buenos Aires</small>
           </a>
           <div>
             <h2>PHP Full Stack Developer</h2>
             <small><i>Sep 2018 - Dec 2020 · 2 yrs 4 mos</i></small>
             <p>
-              Tourism website development for one of the most important cities in LATAM.
+              Tourism website development for one of the most important cities in LATAM. <a href="https://turismo.buenosaires.gob.ar/" target="_blank" title="Turismo Buenos Aires">Get to know Buenos Aires!</a>
             </p>
             <span><strong>Skills:</strong> MySQL · jQuery · Bootstrap · PHP · Drupal</span>
             <br>
@@ -150,27 +149,6 @@ export async function getStaticPaths() {
       </div>
     </div>
 
-    <!-- <div class="experience-box bg-polygon relative">
-      <div class="main-width relative pt-0 pb-0 z-10">
-
-        <div class="block sm:flex">
-          <a href="" target="_blank" title="" class="text-center mt-2 mb-2 mr-4">
-            <img src="" alt=" logo" />
-            <small></small>
-          </a>
-          <div>
-            <h2></h2>
-            <small><i></i></small>
-            <p>
-
-            </p>
-            <span><strong>Skills:</strong> </span>
-          </div>
-        </div>
-
-      </div>
-    </div> -->
-
   </section>
 
   <br><br>
@@ -183,11 +161,10 @@ export async function getStaticPaths() {
     background: var(--primary);
 
     img {
-      background: var(--white);
-      padding: 10px;
       max-width: 100px;
       box-shadow: 0 3px 6px var(--shadow);
       clip-path: polygon(2% 2%, 100% -2%, 98% 100%, 100% 100%, 0 98%);
+      transition: .5s;
     }
     h2 {
       -webkit-text-fill-color: var(--white);
@@ -198,9 +175,27 @@ export async function getStaticPaths() {
     }
     p {
       line-height: 20px;
+      font-weight: 400;
       margin-bottom: 5px;
     }
     p, small, span {
+      color: var(--white);
+    }
+    span {
+      font-weight: 300;
+    }
+    a {
+      color: var(--alternative);
+    }
+    a:hover, a:focus {
+      text-decoration: underline;
+
+      img {
+        transition: .5s;
+        transform: scale(1.05);
+      }
+    }
+    .experience-link:hover, .experience-link:focus {
       color: var(--white);
     }
   }
