--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -116,8 +116,8 @@ hr {
         filter: drop-shadow(0px 3px 2px var(--white));
     }
     // I can't write this in the footer component
-    footer::before {
-        background: rgb(17 24 39);
+    footer, footer::before {
+        background: #000000;
     }
 }
 
