--- a/src/components/home/2. Techs.astro
+++ b/src/components/home/2. Techs.astro
@@ -1,5 +1,4 @@
 ---
-import { languages } from '@i18n/ui';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
@@ -59,13 +58,13 @@ const t = useTranslations(lang);
       </div>
 
     </div>
-    <div class="flex justify-center mt-3">
+    <!-- <div class="flex justify-center mt-3">
       <div class="btn-know-box" style="max-width: max-content;">
-        <a href={`/${lang}/work-experience`} title={t('home.tech.btn')} class="btn-know text-white font-bold py-2 px-4">
-          <span class="text-lg font-medium">{t('home.tech.btn')}</span>
+        <a href={`/${lang}/projects`} title="Projects" class="btn-know text-white font-bold py-2 px-4">
+          <span class="text-lg font-medium">Projects</span>
         </a>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 
@@ -127,16 +126,16 @@ const t = useTranslations(lang);
       min-height: 80px;
 
       img {
-        max-height: 60px;
-        max-width: 60px;
-        margin: 7px;
+        max-height: 50px;
+        max-width: 50px;
+        margin: 5px;
       }
     }
     .techs-group:before, .techs-group:after {
-      height: 97px;
+      height: 90px;
     }
   }
-  .btn-know-box {
+  /* .btn-know-box {
     .btn-know {
       display: inline-block;
       background-color: var(--alternative);
@@ -148,6 +147,6 @@ const t = useTranslations(lang);
       clip-path: polygon(0% 0%,100% 0%,100% 100%,0% 75%,0 75%);
       transition: .3s;
     }
-  }
+  } */
 }
 </style>
