--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -55,14 +55,14 @@ export async function getStaticPaths() {
               Development of a digital library for reading legal books. <a href="https://astreavirtual.com/" target="_blank" title="Astrea Virtual">Get to know it!</a> <br>
               Development of e-commerce for the sale of books.
             </p>
-            <span><strong>Skills:</strong> Angular · NodeJS · Docker · Firebase · IBM Cloud · MongoDB · Elasticsearch</span>
+            <span><strong>Stack:</strong> Angular · NodeJS · Docker · Firebase · IBM Cloud · MongoDB · Elasticsearch</span>
             <div class="mt-3">
               <h3>Researcher: Artificial Intelligence Applied to Justice</h3>
               <small><i>April 2020 - May 2021</i></small>
               <p>
                 Researcher of technologies applied to justice. Artificial intelligence for lawyers and judges.
               </p>
-              <span><strong>Skills:</strong> Angular · NodeJS · Artificial Intelligence (AI) · IBM Watson · Heroku · Python</span>
+              <span><strong>Stack:</strong> Angular · NodeJS · Artificial Intelligence (AI) · IBM Watson · Heroku · Python</span>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@ export async function getStaticPaths() {
             <p>
               Development of real state platform for clients in Argentina, Colombia, and Peru that allows communication and rentals management between brokers, tenants, and owners. Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners.
             </p>
-            <span><strong>Skills:</strong> Angular · TypeScript · NodeJS · Express.js · Docker · MongoDB</span>
+            <span><strong>Stack:</strong> Angular · TypeScript · NodeJS · Express.js · Docker · MongoDB</span>
           </div>
         </div>
 
@@ -133,7 +133,7 @@ export async function getStaticPaths() {
             <p>
               Tourism website development for one of the most important cities in LATAM. <a href="https://turismo.buenosaires.gob.ar/" target="_blank" title="Turismo Buenos Aires">Get to know Buenos Aires!</a>
             </p>
-            <span><strong>Skills:</strong> MySQL · jQuery · Bootstrap · PHP · Drupal</span>
+            <span><strong>Stack:</strong> MySQL · jQuery · Bootstrap · PHP · Drupal</span>
             <br>
             <div class="mt-3">
               <h3>PHP Developer</h3>
@@ -141,7 +141,7 @@ export async function getStaticPaths() {
               <p>
                 Software development for Government of the City of Buenos Aires.
               </p>
-              <span><strong>Skills:</strong> JavaScript · PostgreSQL · PHP</span>
+              <span><strong>Stack:</strong> JavaScript · PostgreSQL · PHP</span>
             </div>
           </div>
         </div>
