--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -18,6 +18,12 @@ export async function getStaticPaths() {
 
   return pages;
 }
+
+let months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
+if (lang == 'es') {
+  months = ['Ene','Feb','Mar','Abr','May','Jun','Jul','Ago','Sep','Oct','Nov','Dic'];
+}
+
 ---
 
 <MainLayout
@@ -50,17 +56,17 @@ export async function getStaticPaths() {
           </a>
           <div>
             <h2>Software Manager</h2>
-            <small><i>May 2021 - Present</i></small>
+            <small><i>{months[4]} 2021 - {t('present')}</i></small>
             <p>
-              Development of a digital library for reading legal books. <a href="https://astreavirtual.com/" target="_blank" title="Astrea Virtual">Get to know it!</a> <br>
-              Development of e-commerce for the sale of books.
+              {t('astrea.text1')} <a href="https://astreavirtual.com/" target="_blank" title="Astrea Virtual">{t('astrea.text2')}</a> <br>
+              {t('astrea.text3')}
             </p>
             <span><strong>Stack:</strong> Angular · NodeJS · Docker · Firebase · IBM Cloud · MongoDB · Elasticsearch</span>
             <div class="mt-3">
-              <h3>Researcher: Artificial Intelligence Applied to Justice</h3>
-              <small><i>April 2020 - May 2021</i></small>
+              <h3>{t('astrea.title')}</h3>
+              <small><i>{months[3]} 2020 - {months[4]} 2021</i></small>
               <p>
-                Researcher of technologies applied to justice. Artificial intelligence for lawyers and judges.
+                {t('astrea.text4')}
               </p>
               <span><strong>Stack:</strong> Angular · NodeJS · Artificial Intelligence (AI) · IBM Watson · Heroku · Python</span>
             </div>
@@ -81,11 +87,11 @@ export async function getStaticPaths() {
             <small>Platzi</small>
           </a>
           <div>
-            <h2>Writing Contributor</h2>
-            <small><i>Mar 2022 - Present</i></small>
+            <h2>{t('platzi.title')}</h2>
+            <small><i>{months[2]} 2022 - {t('present')}</i></small>
             <p>
-              Content creator to contribute to Platzi’s community about technologies such as Angular, NodeJS, Solidity, Rust, Blockchain (Bitcoin, Ethereum, Solana), and Web3. <br>
-              Lead contributor to the internal team as editor and content moderator.
+              {t('platzi.text1')} <br>
+              {t('platzi.text2')}
             </p>
             <span><strong>Skills:</strong> Copywriting · Communication · SEO</span>
           </div>
@@ -106,9 +112,9 @@ export async function getStaticPaths() {
           </a>
           <div>
             <h2>Javascript Full Stack Developer</h2>
-            <small><i>Dec 2020 - Jun 2022 · 1 yr 7 mos</i></small>
+            <small><i>{months[11]} 2020 - {months[5]} 2022</i></small>
             <p>
-              Development of real state platform for clients in Argentina, Colombia, and Peru that allows communication and rentals management between brokers, tenants, and owners. Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners.
+              {t('alquilando.text1')}
             </p>
             <span><strong>Stack:</strong> Angular · TypeScript · NodeJS · Express.js · Docker · MongoDB</span>
           </div>
@@ -125,21 +131,21 @@ export async function getStaticPaths() {
         <div class="block sm:flex">
           <a href="https://buenosaires.gob.ar" target="_blank" title="Gobierno Ciudad de Buenos Aires" class="experience-link text-center mt-2 mb-2 mr-4" style="line-height: 20px;">
             <img src="/projects/buenosaires.png" alt="BA logo" />
-            <small>Government City <br> Buenos Aires</small>
+            <small>{t('turismo.name')} <br> Buenos Aires</small>
           </a>
           <div>
             <h2>PHP Full Stack Developer</h2>
-            <small><i>Sep 2018 - Dec 2020 · 2 yrs 4 mos</i></small>
+            <small><i>{months[8]} 2018 - {months[11]} 2020</i></small>
             <p>
-              Tourism website development for one of the most important cities in LATAM. <a href="https://turismo.buenosaires.gob.ar/" target="_blank" title="Turismo Buenos Aires">Get to know Buenos Aires!</a>
+              {t('turismo.text1')} <a href="https://turismo.buenosaires.gob.ar/" target="_blank" title="Turismo Buenos Aires">{t('turismo.text2')}</a>
             </p>
             <span><strong>Stack:</strong> MySQL · jQuery · Bootstrap · PHP · Drupal</span>
             <br>
             <div class="mt-3">
               <h3>PHP Developer</h3>
-              <small><i>Jul 2017 - Dec 2017 · 6 mos</i></small>
+              <small><i>{months[6]} 2017 - {months[11]} 2017</i></small>
               <p>
-                Software development for Government of the City of Buenos Aires.
+                {t('turismo.text3')}
               </p>
               <span><strong>Stack:</strong> JavaScript · PostgreSQL · PHP</span>
             </div>
