--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -66,6 +66,8 @@ const { Content } = await post.render();
 
     <section class="main-aside-content col-span-3 sm:col-span-1">
       <Aside
+        title={title}
+        description={description}
         relatedPosts={relatedPosts}
       ></Aside>
     </section>
