--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -74,17 +74,17 @@ const day = pubDate.getDate();
     -webkit-text-fill-color: white;
     line-height: 30px;
   }
-  img {
-    clip-path: polygon(2% 2%, 100% -2%, 98% 100%, 100% 100%, 0 98%);
-  }
+  /* img {
+    clip-path: polygon(2% 2%,100% -2%,98% 100%,100% 100%,0 98%);
+  } */
   &.card-background {
     background: var(--bg-gradient);
   }
   .btn-read {
     background-color: var(--alternative);
     height: 50px;
-    margin-bottom: -11px;
-    clip-path: polygon(0 0,100% 0,100% 77%,0% 100%,0 75%);
+    margin-bottom: -9px;
+    clip-path: polygon(0 0,100% 0,100% 82%,0% 100%,0 75%);
   }
 }
 .blog-card::before, .blog-card::after {
@@ -98,12 +98,12 @@ const day = pubDate.getDate();
   backface-visibility: visible;
 }
 .blog-card::before {
-  clip-path: polygon(0 25%, 75% 0, 100% 25%, 100% 100%, 0 100%);
-  top: -50px;
+  clip-path: polygon(0 20%,75% 0,100% 20%,100% 100%,0 100%);
+  top: -40px;
 }
 .blog-card::after {
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 25% 100%, 0 75%);
-  bottom: -50px;
+  clip-path: polygon(0 0,100% 0,100% 80%,25% 100%,0 80%);
+  bottom: -40px;
 }
 @media (max-width: 640px) {
   .blog-card::before, .blog-card::after {
