--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,11 +5,11 @@ h1, h2, h3, h4, h5, h5, h6 {
     -webkit-text-fill-color: transparent;
     background-size: 400%;
     background-position: 0%;
+    line-height: normal;
 }
 h1 {
     font-size: 3rem;
     font-weight: 800;
-    line-height: 50px;
     margin: 10px 0;
 }
 h2 {
