--- a/src/components/home/3. Blog.astro
+++ b/src/components/home/3. Blog.astro
@@ -15,7 +15,8 @@ const { posts } = Astro.props;
     <h2 class="text-gradient font-bold mb-0">
       Blog
     </h2>
-    <hr><br><br><br>
+    <hr class="mt-2 mb-0">
+    <br><br><br>
     <div role="list" class="cards-grid">
       {
         posts.map((item: any) => (
