--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -56,7 +56,7 @@ const { recents, collections } = Astro.props;
     <h2>
       {t('blog.latest')}
     </h2>
-    <hr class="mb-0">
+    <hr class="mt-2 mb-0">
     <br><br><br>
     <div role="list" class="cards-grid">
       {
