--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -41,7 +41,7 @@ if (lang == 'es') {
       <h2 class="mb-3 sm:mb-0">
         {t('projects.experience')}
       </h2>
-      <hr class="mb-0">
+      <hr class="mt-2 mb-0">
     </div>
 
     <br><br>
