Add link to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -124,15 +124,15 @@ const year = new Date().getFullYear();
           <nav aria-label="Legal" class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
+                <a href={`https://github.com/KevinFiorentino/kevfiorentino.com`} target="_blank" title={t('footer.source')} class="text-white transition hover:underline">
+                  {t('footer.source')}
+                </a>
+              </li>
+              <li>
                 <a href={`/rss.xml`} target="_blank" title="RSS" class="text-white transition hover:underline">
                   RSS
                 </a>
               </li>
-              <!-- <li>
-                <a href={`/${lang}/policy`} title={t('policy')} class="text-white transition hover:underline">
-                  {t('policy')}
-                </a>
-              </li> -->
             </ul>
           </nav>
         </div>
