Change images format

--- a/src/components/home/2. Techs.astro
+++ b/src/components/home/2. Techs.astro
@@ -22,39 +22,39 @@ const t = useTranslations(lang);
     <div role="list" class="flex flex-wrap justify-center items-center">
 
       <div class="techs-group m-3">
-        <img src="/tech/javascript.png" alt="Javascript logo" title="Javascript" />
-        <img src="/tech/typescript.png" alt="TypeScript logo" title="TypeScript" />
-        <img src="/tech/angular.png" alt="Angular logo" title="Angular" />
-        <img src="/tech/react.png" alt="React logo" title="React" />
+        <img src="/tech/javascript.webp" alt="Javascript logo" title="Javascript" />
+        <img src="/tech/typescript.webp" alt="TypeScript logo" title="TypeScript" />
+        <img src="/tech/angular.webp" alt="Angular logo" title="Angular" />
+        <img src="/tech/react.webp" alt="React logo" title="React" />
       </div>
 
       <div class="techs-group m-3">
-        <img src="/tech/php.png" alt="PHP logo" title="PHP" />
-        <img src="/tech/nodejs.png" alt="NodeJS logo" title="NodeJS" />
-        <img src="/tech/rust.png" alt="Rust logo" title="Rust" />
-        <img src="/tech/solidity.png" alt="Solidity logo" title="Solidity" />
+        <img src="/tech/php.webp" alt="PHP logo" title="PHP" />
+        <img src="/tech/nodejs.webp" alt="NodeJS logo" title="NodeJS" />
+        <img src="/tech/rust.webp" alt="Rust logo" title="Rust" />
+        <img src="/tech/solidity.webp" alt="Solidity logo" title="Solidity" />
       </div>
 
       <div class="techs-group m-3">
-        <img src="/tech/solana.png" alt="Solana logo" title="Solana Blockchain" />
-        <img src="/tech/ethereum.png" alt="Ethereum logo" title="Ethereum Blockchain" />
-        <img src="/tech/ipfs.png" alt="IPFS logo" title="Interplanetary File System" />
+        <img src="/tech/solana.webp" alt="Solana logo" title="Solana Blockchain" />
+        <img src="/tech/ethereum.webp" alt="Ethereum logo" title="Ethereum Blockchain" />
+        <img src="/tech/ipfs.webp" alt="IPFS logo" title="Interplanetary File System" />
       </div>
 
       <div class="techs-group m-3">
-        <img src="/tech/docker.png" alt="Docker logo" title="Docker" />
-        <img src="/tech/apache.png" alt="Apache logo" title="Apache" />
-        <img src="/tech/nginx.png" alt="NGINX logo" title="NGINX" />
-        <img src="/tech/heroku.png" alt="Heroku logo" title="Heroku" />
-        <img src="/tech/ibm-cloud.png" alt="IBM Cloud logo" title="IBM Cloud" />
-        <img src="/tech/firebase.png" alt="Firebase logo" title="Firebase" />
-        <img src="/tech/linode.png" alt="Linode logo" title="Linode" />
+        <img src="/tech/docker.webp" alt="Docker logo" title="Docker" />
+        <img src="/tech/apache.webp" alt="Apache logo" title="Apache" />
+        <img src="/tech/nginx.webp" alt="NGINX logo" title="NGINX" />
+        <img src="/tech/heroku.webp" alt="Heroku logo" title="Heroku" />
+        <img src="/tech/ibm-cloud.webp" alt="IBM Cloud logo" title="IBM Cloud" />
+        <img src="/tech/firebase.webp" alt="Firebase logo" title="Firebase" />
+        <img src="/tech/linode.webp" alt="Linode logo" title="Linode" />
       </div>
 
       <div class="techs-group m-3">
-        <img src="/tech/mongodb.png" alt="MongoDB logo" title="MongoDB" />
-        <img src="/tech/mysql.png" alt="MySQL logo" title="MySQL" />
-        <img src="/tech/elasticsearch.png" alt="Elasticsearch logo" title="Elasticsearch" />
+        <img src="/tech/mongodb.webp" alt="MongoDB logo" title="MongoDB" />
+        <img src="/tech/mysql.webp" alt="MySQL logo" title="MySQL" />
+        <img src="/tech/elasticsearch.webp" alt="Elasticsearch logo" title="Elasticsearch" />
       </div>
 
     </div>
