--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -46,7 +46,7 @@ const { recents, collections } = Astro.props;
 <MainLayout
   title={`Blog | Kevin Fiorentino`}
   description={`Kevin Fiorentino's personal blog`}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={false}
 >
   <section class="main-width">
