--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -23,7 +23,7 @@ export async function getStaticPaths() {
 <MainLayout
   title={`${t('contact')} | Kevin Fiorentino`}
   description={t('contact.description')}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={false}
 >
   <br><br>
