--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -47,7 +47,7 @@ const { posts } = Astro.props;
 <MainLayout
   title="Home | Kevin Fiorentino"
   description={`Kevin Fiorentino's personal and professional website`}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={false}
 >
 
