--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -68,7 +68,7 @@ const props = Astro.props;
 <MainLayout
   title={`Blog ${param.tag} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${param.tag}`}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={true}
 >
   <div>
