--- a/src/components/home/1. Presentation.astro
+++ b/src/components/home/1. Presentation.astro
@@ -17,7 +17,7 @@ const t = useTranslations(lang);
   </div>
   <div class="order-first md:order-last">
     <div class="polygon-shadow">
-      <img src="/kevin.png" class="kev-image m-auto" alt="Kevin Fiorentino" />
+      <img src="/kevin.webp" class="kev-image m-auto" alt="Kevin Fiorentino" />
     </div>
     <p class="uppercase dark:text-white text-center mt-3">I got amazing power of observation</p>
   </div>
