--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import MainLayout from '@layouts/MainLayout.astro';
 <MainLayout
   title={`Page not found | Kevin Fiorentino`}
   description={`Page not found`}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={true}
 >
   <h1 class="sr-only">
