--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -29,7 +29,7 @@ if (lang == 'es') {
 <MainLayout
   title={`${t('projects')} | Kevin Fiorentino`}
   description={t('projects.description')}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={false}
 >
   <section class="experience-page relative">
