--- a/src/pages/[lang]/tags/index.astro
+++ b/src/pages/[lang]/tags/index.astro
@@ -41,7 +41,7 @@ const tags = Astro.props.tags;
 <MainLayout
   title={`Tags | Kevin Fiorentino`}
   description={`Kevin Fiorentino's tags`}
-  image="/kevin.png"
+  image="/kevin.webp"
   addWidth={false}
 >
   <br><br>
