--- a/src/components/articles/ShareSocialMedia.astro
+++ b/src/components/articles/ShareSocialMedia.astro
@@ -18,7 +18,7 @@ const { title, description } = Astro.props;
     <a href={`https://www.linkedin.com/shareArticle?url=${currentUrl}`} title={`${t('share-on')} LinkedIn`} target="_blank" rel="noopener noreferrer">
       <img src="/social/linkedin.png" alt="LinkedIn Logo" />
     </a>
-    <a href={`https://twitter.com/?status=${currentUrl}`} title={`${t('share-on')} Twitter X`} target="_blank" rel="noopener noreferrer">
+    <a href={`https://twitter.com/intent/tweet?text=${currentUrl}`} title={`${t('share-on')} Twitter X`} target="_blank" rel="noopener noreferrer">
       <img src="/social/twitter-x.png" alt="Twitter X Logo" />
     </a>
     <a href={`https://wa.me/?text=${currentUrl}`} data-action='share/whatsapp/share' title={`${t('share-on')} WhatsApp`} target="_blank" rel="noopener noreferrer">
