Change project dates

--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -88,7 +88,7 @@ if (lang == 'es') {
           </a>
           <div>
             <h2>{t('platzi.title')}</h2>
-            <small><i>{months[2]} 2022 - {t('present')}</i></small>
+            <small><i>{months[2]} 2022 - {months[6]} 2023</i></small>
             <p>
               {t('platzi.text1')} <br>
               {t('platzi.text2')}
