--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const t = useTranslations(lang);
                 Kevin Fiorentino —△🌈
               </a>
               <p class="mt-1.5 text-sm">
-                Javascript Engineer | Blockchain & Web3 | Graduate in Systems
+                Javascript Engineer | Graduate in Systems
               </p>
             </div>
 
