--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const t = useTranslations(lang);
                 Kevin Fiorentino —△🌈
               </a>
               <p class="mt-1.5 text-sm">
-                Software Engineer | Graduate in Systems
+                Solutions Architect | Bachelor's in Information Systems
               </p>
             </div>
 
