Remove lang picker

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const year = new Date().getFullYear();
         <p class="sign text-white font-bold block text-2xl sm:text-3xl">
           Kev —△🌈 <br>
           <span class="text-white font-normal text-xs tracking-wide uppercase">
-            <i>I got amazing power of observation</i> 🎹
+            <i class="mr-1">I got amazing power of observation</i> 🎹
           </span>
         </p>
 
