--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -4,7 +4,7 @@ import { collectionMetadata } from '@content/config';
 import MainLayout from '@layouts/MainLayout.astro';
 import Aside from '@components/articles/Aside.astro';
 import Breadcrumbs from '@components/articles/Breadcrumbs.astro';
-import DisplayTagsDate from '@components/articles/DisplayTagsDate.astro';
+import DisplayDate from '@components/articles/DisplayDate.astro';
 
 import '@styles/article.scss';
 
@@ -37,7 +37,7 @@ const param = Astro.params;
 const post = Astro.props.post;
 
 const { collection } = post;
-const { title, description, image, tags, pubDate, relatedPosts } = post.data;
+const { title, description, image, pubDate, relatedPosts } = post.data;
 const { Content } = await post.render();
 ---
 
@@ -54,10 +54,9 @@ const { Content } = await post.render();
         <Breadcrumbs
           collection={collection}
         ></Breadcrumbs>
-        <DisplayTagsDate
-          tags={tags}
+        <DisplayDate
           pubDate={pubDate}
-        ></DisplayTagsDate>
+        ></DisplayDate>
       </section>
       <article class="main-article-content" >
         <Content />
