--- a/src/components/home/1. Presentation.astro
+++ b/src/components/home/1. Presentation.astro
@@ -19,6 +19,32 @@ const t = useTranslations(lang);
     <div class="polygon-shadow">
       <img src="/kevin.webp" class="kev-image m-auto" alt="Kevin Fiorentino" />
     </div>
+    <ul class="mt-4 flex justify-center items-center gap-6">
+      <li>
+        <a href="https://www.linkedin.com/in/kevinfiorentino/" title="LinkedIn" target="_blank" rel="noreferrer" class="footer-icon">
+          <span class="sr-only">LinkedIn</span>
+          <svg class="media-icon" viewBox="0 0 19 18" height="25" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3.94 2A2 2 0 1 1 2 0a2 2 0 0 1 1.94 2zM4 5.48H0V18h4zm6.32 0H6.34V18h3.94v-6.57c0-3.66 4.77-4 4.77 0V18H19v-7.93c0-6.17-7.06-5.94-8.72-2.91z"></path>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/KevinFiorentino" title="GitHub" target="_blank" rel="noreferrer" class="footer-icon">
+          <span class="sr-only">GitHub</span>
+          <svg class="media-icon" viewBox="0 0 16 16" width="25" height="25" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="https://platzi.com/p/KevinFiorentino/" title="Platzi" target="_blank" rel="noreferrer" class="footer-icon">
+          <span class="sr-only">Platzi</span>
+          <svg class="media-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65 75" height="25" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g><path d="M 30.5,-0.5 C 33.8333,-0.5 37.1667,-0.5 40.5,-0.5C 49.8996,6.56474 57.8996,14.8981 64.5,24.5C 64.5,26.5 64.5,28.5 64.5,30.5C 58.9607,37.5475 52.794,44.2141 46,50.5C 45.3333,51.1667 45.3333,51.8333 46,52.5C 48.5535,54.7162 50.7201,57.2162 52.5,60C 49.2756,64.7261 45.2756,68.5595 40.5,71.5C 37.1667,71.5 33.8333,71.5 30.5,71.5C 19.8333,61.5 9.5,51.1667 -0.5,40.5C -0.5,37.1667 -0.5,33.8333 -0.5,30.5C 9.5,19.8333 19.8333,9.5 30.5,-0.5 Z M 34.5,12.5 C 40.4218,16.7513 45.7551,21.7513 50.5,27.5C 45.5,32.8333 40.5,38.1667 35.5,43.5C 37.8333,46.1667 40.1667,48.8333 42.5,51.5C 40.5,54.1667 38.1667,56.5 35.5,58.5C 27.5,51.1667 19.8333,43.5 12.5,35.5C 19.8548,27.8128 27.1881,20.1461 34.5,12.5 Z"/></g>
+          </svg>
+        </a>
+      </li>
+    </ul>
   </div>
 </section>
 
@@ -27,4 +53,10 @@ const t = useTranslations(lang);
   max-height: 280px;
   clip-path: polygon(15% 10%, 100% 0, 100% 25%, 100% 100%, 0 85%);
 }
+.media-icon {
+  path {
+    fill: var(--black);
+  }
+}
+// The media-mode of lang-icon is in global.scss
 </style>
